syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.x.grpc.auth";
option java_outer_classname = "AuthServiceProto";

package auth;

// 认证服务
service AuthService {
  // 用户登录
  rpc Login (LoginRequest) returns (LoginResponse);
  
  // 验证Token
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
  
  // 检查权限
  rpc CheckPermission (CheckPermissionRequest) returns (CheckPermissionResponse);
}

// 登录请求
message LoginRequest {
  string username = 1;
  string password = 2;
}

// 登录响应
message LoginResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
  string username = 4;
  string role = 5;
  int64 expire_time = 6;
}

// 验证Token请求
message ValidateTokenRequest {
  string token = 1;
}

// 验证Token响应
message ValidateTokenResponse {
  bool valid = 1;
  string message = 2;
  string username = 3;
  string role = 4;
  int64 expire_time = 5;
}

// 检查权限请求
message CheckPermissionRequest {
  string token = 1;
  string permission = 2;
}

// 检查权限响应
message CheckPermissionResponse {
  bool has_permission = 1;
  string message = 2;
}